--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "@vueuse/nuxt": "^10.4.0",
     "nuxt": "^3.7.0",
     "nuxt-icon": "^0.5.0"
+  },
+  "dependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
