--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "latest",
     "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@nuxtjs/tailwindcss": "^6.10.4",
     "@vueuse/nuxt": "^10.4.0",
     "nuxt": "^3.9.2",
-    "nuxt-icon": "^0.5.0"
+    "nuxt-icon": "^0.5.0",
+    "shadcn-nuxt": "^0.8.7",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@radix-icons/vue": "^1.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4"
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "radix-vue": "^1.3.2",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
