--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/nuxt": "^10.4.0",
     "nuxt": "^3.9.2",
     "nuxt-icon": "^0.5.0",
+    "nuxt-og-image": "3.0.0-rc.27",
     "shadcn-nuxt": "^0.8.7",
     "typescript": "^5.3.3"
   },
