--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@vueuse/nuxt": "^10.4.0",
-    "nuxt": "^3.9.2",
+    "nuxt": "^3.9.3",
     "nuxt-icon": "^0.5.0",
     "nuxt-og-image": "3.0.0-rc.27",
     "shadcn-nuxt": "^0.8.7",
-    "typescript": "^5.3.3"
-  },
-  "dependencies": {
+    "typescript": "^5.3.3",
     "@radix-icons/vue": "^1.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "class-variance-authority": "^0.7.0",
@@ -31,5 +29,6 @@
     "radix-vue": "^1.3.2",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
-  }
+  },
+  "dependencies": {}
 }
