--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/tailwindcss": "^6.10.4",
+    "@radix-icons/vue": "^1.0.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@vueuse/motion": "^2.0.0",
     "@vueuse/nuxt": "^10.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "nuxt": "^3.9.3",
     "nuxt-icon": "^0.5.0",
     "nuxt-og-image": "3.0.0-rc.27",
-    "shadcn-nuxt": "^0.8.7",
-    "typescript": "^5.3.3",
-    "@radix-icons/vue": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "radix-vue": "^1.3.2",
+    "shadcn-nuxt": "^0.8.7",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "dependencies": {}
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.3.3"
+  }
 }
