--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^3.10.3",
     "nuxt-icon": "^0.5.0",
     "nuxt-og-image": "3.0.0-rc.27",
+    "nuxt-svgo": "^4.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "radix-vue": "^1.3.2",
