--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "latest",
+    "@nuxt/icon": "^1.5.2",
     "@nuxthq/studio": "^1.0.12",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/google-fonts": "^3.0.2",
@@ -21,10 +22,8 @@
     "@vueuse/nuxt": "^10.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "nuxt": "^3.11.0",
-    "nuxt-icon": "^0.5.0",
+    "nuxt": "^3.13.2",
     "nuxt-og-image": "3.0.0-rc.27",
-    "nuxt-svgo": "^4.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "radix-vue": "^1.3.2",
