--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxt/content": "^2.8.2",
     "@nuxt/devtools": "latest",
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.5.2",
     "@nuxthq/studio": "^1.0.12",
     "@nuxtjs/color-mode": "^3.3.2",
