--- a/package.json
+++ b/package.json
@@ -9,31 +9,32 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.8.2",
-    "@nuxt/devtools": "latest",
+    "@nuxt/content": "^2.13.4",
     "@nuxt/fonts": "^0.10.3",
-    "@nuxt/icon": "^1.5.2",
-    "@nuxthq/studio": "^1.0.12",
-    "@nuxtjs/color-mode": "^3.3.2",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/tailwindcss": "^6.10.4",
+    "@nuxt/icon": "^1.10.3",
+    "@nuxthq/studio": "^2.2.1",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@radix-icons/vue": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@vueuse/motion": "^2.0.0",
-    "@vueuse/nuxt": "^10.4.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "nuxt": "^3.13.2",
-    "nuxt-og-image": "3.0.0-rc.27",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "radix-vue": "^1.3.2",
-    "shadcn-nuxt": "^0.10.4",
-    "tailwind-merge": "^2.2.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@vueuse/motion": "^2.2.6",
+    "@vueuse/nuxt": "^12.4.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "nuxt": "^3.15.1",
+    "nuxt-og-image": "4.0.2",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "radix-vue": "^1.9.12",
+    "shadcn-nuxt": "^0.11.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@formkit/tempo": "^0.1.2"
+    "@formkit/tempo": "^0.1.2",
+    "@vueuse/core": "^12.4.0",
+    "tailwindcss": "^3.4.17"
   }
 }
