--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/content": "^2.13.4",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
+    "@nuxt/image": "1.9.0",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
