--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.13.4",
+    "@nuxt/content": "^3.2.1",
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "1.9.0",
@@ -18,14 +18,14 @@
     "@nuxtjs/tailwindcss": "^6.13.1",
     "@tailwindcss/typography": "^0.5.16",
     "@vueuse/motion": "^2.2.6",
-    "@vueuse/nuxt": "^12.5.0",
+    "@vueuse/nuxt": "^12.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "nuxt": "^3.15.4",
     "nuxt-og-image": "4.0.2",
-    "prettier": "^3.5.0",
+    "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "radix-vue": "^1.9.14",
+    "radix-vue": "^1.9.16",
     "shadcn-nuxt": "^0.11.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -33,7 +33,17 @@
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
-    "@vueuse/core": "^12.5.0",
-    "tailwindcss": "^3.4.17"
+    "@vueuse/core": "^12.7.0",
+    "tailwindcss": "^3.4.17",
+    "vue": "^3.5.13"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild",
+      "sharp",
+      "vue-demi"
+    ]
   }
 }
