--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "nuxt": "^3.15.4",
     "nuxt-og-image": "4.0.2",
+    "nuxt-umami": "^3.1.1",
     "prettier": "^3.5.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "radix-vue": "^1.9.16",
