--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^3.2.1",
-    "@nuxt/fonts": "^0.10.3",
-    "@nuxt/icon": "^1.10.3",
+    "@nuxt/content": "^3.4.0",
+    "@nuxt/fonts": "^0.11.1",
+    "@nuxt/icon": "^1.11.0",
     "@nuxt/image": "1.9.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.13.1",
+    "@nuxtjs/tailwindcss": "^6.13.2",
     "@tailwindcss/typography": "^0.5.16",
-    "@vueuse/motion": "^2.2.6",
-    "@vueuse/nuxt": "^12.7.0",
+    "@vueuse/motion": "^3.0.3",
+    "@vueuse/nuxt": "^13.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "nuxt": "^3.15.4",
+    "nuxt": "^3.16.2",
     "nuxt-og-image": "4.1.4",
-    "nuxt-umami": "^3.1.1",
-    "prettier": "^3.5.2",
+    "nuxt-umami": "^3.2.0",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "radix-vue": "^1.9.16",
-    "shadcn-nuxt": "^0.11.3",
-    "tailwind-merge": "^2.6.0",
+    "radix-vue": "^1.9.17",
+    "shadcn-nuxt": "^2.0.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
-    "@vueuse/core": "^12.7.0",
+    "@vueuse/core": "^13.0.0",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13"
   },
@@ -46,5 +46,6 @@
       "sharp",
       "vue-demi"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.7.1"
 }
