--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
+    "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^13.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.3",
     "vue": "^3.5.13"
   },
   "pnpm": {
