--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@formkit/tempo": "^0.1.2",
     "@tailwindcss/vite": "^4.1.3",
     "@vueuse/core": "^13.0.0",
+    "lucide-vue-next": "^0.487.0",
+    "reka-ui": "^2.2.0",
     "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5",
     "vue": "^3.5.13"
   },
   "pnpm": {
