--- a/package.json
+++ b/package.json
@@ -13,40 +13,38 @@
   "devDependencies": {
     "@nuxt/content": "^3.6.3",
     "@nuxt/fonts": "^0.11.4",
-    "@nuxt/icon": "^1.15.0",
+    "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "1.9.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.16.0",
-    "@vueuse/motion": "^3.0.3",
-    "@vueuse/nuxt": "^13.5.0",
+    "@types/node": "^22.18.1",
+    "@vueuse/nuxt": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "nuxt": "^3.17.6",
+    "nuxt": "^4.1.1",
     "nuxt-og-image": "5.1.2",
     "nuxt-umami": "^3.2.0",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "radix-vue": "^1.9.17",
     "shadcn-nuxt": "^2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   },
   "dependencies": {
     "@formkit/tempo": "^0.1.2",
-    "@tailwindcss/vite": "^4.1.11",
-    "@vueuse/core": "^13.5.0",
-    "lucide-vue-next": "^0.487.0",
-    "motion-plus": "^0.1.9",
+    "@tailwindcss/vite": "^4.1.13",
+    "@vueuse/core": "^13.9.0",
+    "lucide-vue-next": "^0.542.0",
     "motion-v": "1.5.0",
-    "reka-ui": "^2.3.2",
-    "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.5",
-    "vue": "^3.5.17"
+    "reka-ui": "^2.5.0",
+    "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.8",
+    "vue": "^3.5.21"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -57,5 +55,5 @@
       "vue-demi"
     ]
   },
-  "packageManager": "pnpm@10.12.4+sha512.5ea8b0deed94ed68691c9bad4c955492705c5eeb8a87ef86bc62c74a26b037b08ff9570f108b2e4dbd1dd1a9186fea925e527f141c648e85af45631074680184"
+  "packageManager": "pnpm@10.15.1"
 }
