--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxt/content": "^3.8.2",
     "@nuxt/fonts": "^0.11.4",
+    "@nuxt/hints": "1.0.0-alpha.2",
     "@nuxt/icon": "^2.1.0",
     "@nuxt/image": "1.9.0",
     "@nuxtjs/color-mode": "^3.5.2",
