--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/hints": "1.0.0-alpha.2",
     "@nuxt/icon": "^2.1.0",
     "@nuxt/image": "1.9.0",
+    "@nuxthub/core": "^0.10.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
